# PaperMatch_crossref

./: .env.sample  .gitignore  README.md  app.py  consolidate.py  embed.py  embed_all.py  embed_multigpu_split.py  embed_split.py  embed_split_vastai.py  main.py  metadata.py  prepare_embeddings.py  prepare_milvus.py  pyproject.toml  requirements.txt  runpod.sh  start_milvus.sh
