[project]
name = "papermatch-crossref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "pymilvus>=2.5.14",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
